# python-application-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
env/: .env.local
scripts/: bootstrap.sh
src/app/config/: env.py  settings.py
src/app/core/: exceptions.py  logging.py
src/app/entrypoints/: main.py
