[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "__PROJECT_DESCRIPTION__"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
